# paideia_game_engine_design

./: Cargo.toml  LICENSE  README.md  installation.md  new-rust-project.md  setup.md  testing.md
brigade/: Cargo.toml
brigade/src/: app.rs  assets.rs  components.rs  lib.rs  renderer.rs
brigade/tests/simple_test/: Cargo.toml
brigade/tests/simple_test/src/: main.rs
starter code/: Cargo.toml  app.rs  assets.rs  globe_viewer.rs  lib.rs  rect.rs
tests/globe_viewer/: Cargo.toml
tests/globe_viewer/src/: main.rs
