[package]
name = "my_game_engine" # Change to your game engine name
version = "0.1.0"
edition = "2021"

# Don't worry about any of this stuff below

[dependencies]
anyhow = "1.0.79"
nalgebra = "0.32.3"
sdl2 = { version = "0.36.0", features = ["image", "unsafe_textures"] }

[dependencies.legion]
version = "0.4.0"
git = "https://github.com/amethyst/legion"
default_features = false
features = [
    "codegen",
    "crossbeam-events",
    "parallel",
    "reexport"
]

[workspace]
members = [
    "tests/hello_world",
    # "tests/globe_viewer", # Uncomment this when we're ready to test
]
