[dependencies]
anyhow = "1.0.79"
nalgebra = "0.32.3"
sdl2 = { version = "0.36.0", features = ["image", "unsafe_textures"] }

[dependencies.legion]
version = "0.4.0"
git = "https://github.com/amethyst/legion"
default_features = false
features = [
    "codegen",
    "crossbeam-events",
    "parallel",
    "reexport"
]

[workspace]
members = [
    "tests/*"
]
