[package]
name = "<your engine name here>"
edition = "2021"
version = "0.1.0"

[dependencies]
# Error handling
anyhow = "1.0.79"
# Image loading
image = "0.24.8"
# Math
nalgebra = "0.32.3"

# Graphics
[dependencies.sdl2]
version = "0.36.0"
features = ["image", "unsafe_textures"]

# ECS
[dependencies.legion]
version = "0.4.0"
git = "https://github.com/amethyst/legion"
default_features = false
features = [
    "codegen",
    "crossbeam-events",
    "parallel",
    "reexport"
]

[workspace]
members = [
    "tests/*"
]
